--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Large media files (hosted on Cloudinary)
+public/blog_images/*.mp4
+public/blog_images/*.mov
+public/blog_images/*.webm
+public/blog_images/*.avi
